--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <title>
+        Änderungen machen und merken
+    </title>
 </head>
 <body>
     <img src="assets/img/illustration1.gif" alt="">
+
 </body>
 </html>
