--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <img src="assets/img/illustration1.gif" alt="">
     <h1>Hi</h1>
-
+    <h1>Hello</h1>
+    <h1>Bonjour</h1>
 </body>
 </html>
