--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <h1>Hi</h1>
     <h1>Hello</h1>
     <h1>Bonjour</h1>
+    <div id="footer">
+        contact: email@email.com
+      </div>      
 </body>
 </html>
