--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <h1>Hi</h1>
     <h1>Hello</h1>
     <h1>Bonjour</h1>
+    <footer id=”footer”>
+        Please contact us at: email@email.com
+      </footer>      
 </body>
 </html>
