--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h1>Bonjour</h1>
     <footer id=”footer”>
         Please contact us at: email@email.com
-      </footer>      
+      </footer>
+      <a href="#">This is a link</a>   
 </body>
 </html>
