--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <footer id=”footer”>
         Please contact us at: email@email.com
       </footer>
+      <p>Lorem ipsum dolor sit amet consectetur.</p>
 </body>
 </html>
